# Segmentation-App

./: README.md  app.py  pyproject.toml
coco_train_cars/: result.json
